crates/pardosa-genome/tests/compile_fail/btreeset_non_genome_ord.stderr
error[E0277]: the trait bound `MyItem: GenomeOrd` is not satisfied
  --> tests/compile_fail/btreeset_non_genome_ord.rs:14:12
   |
14 |     items: BTreeSet<MyItem>,
   |            ^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `GenomeOrd` is not implemented for `MyItem`
  --> tests/compile_fail/btreeset_non_genome_ord.rs:6:1
   |
 6 | struct MyItem {
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `GenomeOrd`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
   = note: required for `BTreeSet<MyItem>` to implement `GenomeSafe`
